# arda-live-media-server

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
AutomatedTests/: health_check_endpoint_tests.py
Trash/: media_observer.rs  webrtc_api.rs
Trash/routes/: resources.rs
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  webrtc_api.rs
src/http_server/: http_server_startup.rs  mod.rs
src/http_server/routes/: health_check_controller.rs  mod.rs  webrtc_controller.rs
src/media/: live_media_stream.rs  media_endpoints.rs  media_observer.rs  media_resources.rs  mod.rs
src/media/core/: frame.rs  media_buffer.rs  mod.rs
src/media_server/: media_server.rs  media_server_startup.rs  mod.rs
src/media_server/generic_rtsp_client/: mod.rs
src/media_server/webrtc_server/: mod.rs
src/routes/: mod.rs  resources.rs
src/routes/api/v1/: mod.rs  resources.rs
